fixing scrollbar from x-axis

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -986,6 +986,7 @@ nav button:hover {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  overflow-x: hidden;
 }
 #page-7 h2 {
   color: #7600ff;
